Updated column layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Login Screen - Practie</title>
   </head>
   <body>
+    <div class="row">
+      <div class="col">
+        Login form will appear here
+      </div>
+      <div class="col">
+        <img src="/assets/Right Pane.jpg" alt="building image">
+      </div>
+    </div>
     This is a Login Screen Practice web page
   </body>
 </html>
