--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <body>
     <div class="row">
       <div class="col">
-        Login form will appear here
+        <img src="/assets/logo.png" alt="logo">
+        <h2>Thank you for choosing us</h2>
+        <p>Welcome back! Please enter your details below</p>
+        <form class="" action="index.html" method="post">
+          <input type="email" name="username" value="email@example.com">
+          <input type="password" name="pass">
+          <input type="submit" name="login" value="Login">
+        </form>
       </div>
       <div class="col">
         <img src="/assets/Right Pane.jpg" alt="building image">
