changing image size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="row">
       <div class="col">
-        <img src="/assets/logo.png" alt="logo">
+        <img class="logo" src="/assets/logo.png" alt="logo">
         <h2>Thank you for choosing us</h2>
         <p>Welcome back! Please enter your details below</p>
         <form class="" action="index.html" method="post">
@@ -19,7 +19,7 @@
         </form>
       </div>
       <div class="col">
-        <img src="/assets/Right Pane.jpg" alt="building image">
+        <img class="pane" src="/assets/Right Pane.jpg" alt="building image">
       </div>
     </div>
   </body>
