Adding HR with text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <h2>Thank you for choosing us</h2>
         <p>Welcome back! Please enter your details below</p>
         <form class="" action="index.html" method="post">
-          <input type="email" name="username" value="email@example.com">
-          <input type="password" name="pass">
-          <input type="submit" name="login" value="Login">
+          <input type="email" name="username" value="email@example.com"><br>
+          <input type="password" name="pass"><br>
+          <input type="submit" name="login" value="Login"><br>
         </form>
+        <hr class="hr_text" data-content="OR">
       </div>
       <div class="col">
         <img class="pane" src="/assets/Right Pane.jpg" alt="building image">
