Adding social login buttons

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>Login Screen - Practie</title>
   </head>
   <body>
     <div class="row">
       <div class="col">
-        <img class="logo" src="/assets/logo.png" alt="logo">
+        <img class="logo" src="assets/logo.png" alt="logo">
         <h2>Thank you for choosing us</h2>
         <p>Welcome back! Please enter your details below</p>
         <form class="" action="index.html" method="post">
@@ -19,9 +19,15 @@
           <input type="submit" name="login" value="Login"><br>
         </form>
         <hr class="hr_text" data-content="OR">
+        <button type="button" name="googleLogin"><img src="assets/google.png">Log In with Google</button><br>
+        <button type="button" name="fbLogin"><img src="assets/facebook.png">Log In with Facebook</button><br>
+        <button type="button" name="twitterLogin"><img src="assets/twitter.png">Log In with Twitter</button><br>
+        <p>Don't have an account yet?
+          <a href="#">Sign up now</a>
+        </p>
       </div>
       <div class="col">
-        <img class="pane" src="/assets/Right Pane.jpg" alt="building image">
+        <img class="pane" src="assets/Right Pane.jpg" alt="building image">
       </div>
     </div>
   </body>
