--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <div class="row">
       <div class="col">
         <img class="logo" src="assets/logo.png" alt="logo">
-        <h2>Thank you for choosing us</h2>
-        <p>Welcome back! Please enter your details below</p>
-        <form class="" action="index.html" method="post">
+        <h2 class="bigText">Thank you for choosing us</h2>
+        <p class="smallText">Welcome back! Please enter your details below</p>
+        <form class="loginForm" action="index.html" method="post">
           <input type="email" name="username" value="email@example.com"><br>
           <input type="password" name="pass"><br>
           <input type="submit" name="login" value="Login"><br>
         </form>
         <hr class="hr_text" data-content="OR">
-        <button type="button" name="googleLogin"><img src="assets/google.png">Log In with Google</button><br>
-        <button type="button" name="fbLogin"><img src="assets/facebook.png">Log In with Facebook</button><br>
-        <button type="button" name="twitterLogin"><img src="assets/twitter.png">Log In with Twitter</button><br>
-        <p>Don't have an account yet?
+        <button type="button" name="googleLogin"><img class="socialLogo" src="assets/google.png">Log In with Google</button><br>
+        <button type="button" name="fbLogin"><img class="socialLogo" src="assets/facebook.png">Log In with Facebook</button><br>
+        <button type="button" name="twitterLogin"><img class="socialLogo" src="assets/twitter.png">Log In with Twitter</button><br>
+        <p class="smallText">Don't have an account yet?
           <a href="#">Sign up now</a>
         </p>
       </div>
