Setting equal width to social login buttons

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
           <input type="submit" name="login" value="Login"><br>
         </form>
         <hr class="hr_text" data-content="OR">
-        <button type="button" name="googleLogin"><img class="socialLogo" src="assets/google.png">Log In with Google</button><br>
-        <button type="button" name="fbLogin"><img class="socialLogo" src="assets/facebook.png">Log In with Facebook</button><br>
-        <button type="button" name="twitterLogin"><img class="socialLogo" src="assets/twitter.png">Log In with Twitter</button><br>
+        <div class="socialLogin">
+          <button class="socialButton" type="button" name="googleLogin"><img class="socialLogo" src="assets/google.png">Log In with Google</button><br>
+          <button class="socialButton" type="button" name="fbLogin"><img class="socialLogo" src="assets/facebook.png">Log In with Facebook</button><br>
+          <button class="socialButton" type="button" name="twitterLogin"><img class="socialLogo" src="assets/twitter.png">Log In with Twitter</button><br>
+        </div>
         <p class="smallText">Don't have an account yet?
           <a href="#">Sign up now</a>
         </p>
